--- a/styleTema2.css
+++ b/styleTema2.css
@@ -2178,7 +2178,7 @@ z-index: 999;
   top: 48px;
   margin-left: 20px;
   transition: all 0.5s ease-in-out;
-  background:   #ff71ce;
+  background: rgba(0,0,0,.8);
   width: 180px;
   height: 60px;
   border-radius: 5px;
@@ -2261,10 +2261,10 @@ line-height: 100px;
   font-weight: bold;
   border-radius: 10px 10px ;
   box-shadow: 15px 10px 15px #b967ff;
-  width: 640px;
+  width: 680px;
 height: 30px;
   font-size: 20px;
-  margin: -2px 100px;
+  margin: -2px 42px;
 }
 
 .recuadro6 {
@@ -2438,8 +2438,8 @@ top: 15px;
 }
 
 
-/* Yellow Shadow */
-@-moz-keyframes yellow {
+/* verde Shadow */
+@-moz-keyframes verde {
   0%, 100% {
     -moz-box-shadow: 1px 0px 19px 4px #05ffa1, inset 0px 0px 10px rgba(255, 255, 255, 0.5);
     box-shadow: 1px 0px 19px 4px #05ffa1, inset 0px 0px 10px rgba(255, 255, 255, 0.5); }
@@ -2448,7 +2448,7 @@ top: 15px;
     -moz-box-shadow: 0px 0px 0px 0px rgba(255, 245, 3, 0), inset 0px 0px 0px rgba(255, 255, 255, 0);
     box-shadow: 0px 0px 0px 0px rgba(255, 245, 3, 0), inset 0px 0px 0px rgba(255, 255, 255, 0); } }
 
-@-webkit-keyframes yellow {
+@-webkit-keyframes verde {
   0%, 100% {
     -webkit-box-shadow: 1px 0px 19px 4px #05ffa1, inset 0px 0px 10px rgba(255, 255, 255, 0.5);
     box-shadow: 1px 0px 19px 4px #05ffa1, inset 0px 0px 10px rgba(255, 255, 255, 0.5); }
@@ -2457,21 +2457,21 @@ top: 15px;
     -webkit-box-shadow: 0px 0px 0px 0px rgba(255, 245, 3, 0), inset 0px 0px 0px rgba(255, 255, 255, 0);
     box-shadow: 0px 0px 0px 0px rgba(255, 245, 3, 0), inset 0px 0px 0px rgba(255, 255, 255, 0); } }
 
-@-o-keyframes yellow {
+@-o-keyframes verde {
   0%, 100% {
     box-shadow: 1px 0px 19px 4px #05ffa1, inset 0px 0px 10px rgba(255, 255, 255, 0.5); }
 
   50% {
     box-shadow: 0px 0px 0px 0px rgba(255, 245, 3, 0), inset 0px 0px 0px rgba(255, 255, 255, 0); } }
 
-@keyframes yellow {
+@keyframes verde {
   0%, 100% {
     box-shadow: 1px 0px 19px 4px #05ffa1, inset 0px 0px 10px rgba(255, 255, 255, 0.5); }
 
   50% {
     box-shadow: 0px 0px 0px 0px rgba(255, 245, 3, 0), inset 0px 0px 0px rgba(255, 255, 255, 0); } }
 
-  .yellow {
+  .verde {
   text-shadow: 0px 1px 0px #0055a4;
   background-image: -webkit-linear-gradient(top, #05ffa1, #40e0d0);
   background-image: -moz-linear-gradient(top, #05ffa1, #40e0d0);
@@ -2482,6 +2482,107 @@ top: 15px;
   -o-animation: yellow 1s infinite;
   animation: yellow 1s infinite; }
 
+.caja3 {
+    border-radius: 10px;
+    background: -webkit-linear-gradient(left, #d5a3ff 0%,#c785ff 42%, 52%, #b967ff);
+    padding: 20px;
+    box-shadow: 10px 18px 12px 1px rgba(0, 0, 0, 0.2);
+    line-height: 1;
+    width: 230px;
+    height: 80px;
+    margin: -305px 620px;
+    font-size: 15px;
+    text-align: justify;
+    font-weight: bold;
+}
+
+.containerMass5, .buttonMas5 {
+  position: absolute;
+}
+
+.nav5 {
+  position: relative;
+}
+
+.containerMass5 {
+margin: auto;
+top: 65px;
+left: 210px;
+width: 660px;
+height: 315px;
+}
+
+#toggles5 {
+  display: none;
+}
+
+.buttonMass5 {
+z-index: 999;
+  width: 43px;
+  height: 43px;
+  background: #77CBC9;
+  border-radius: 100%;
+  transition: all 0.5s ease-in-out;
+  box-shadow: 1px 3px 10px 0 rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  left: 510px;
+margin: 235px -1px;
+position: absolute;
+ 
+}
+
+.buttonMass5:hover {
+  background: #ff71ce;
+}
+
+.buttonMass5:before {
+ position: absolute;
+  top: 20px;
+  left: 9px;
+  content: '';
+  width: 25px;
+  height: 2px;
+  background: #FFF;
+  transform: rotate(90deg);
+}
+.buttonMass5:after {
+ position: absolute;
+  top: 20px;
+  left: 9px;
+  content: '';
+  width: 25px;
+  height: 2px;
+  background: #FFF;
+}
+
+.nav5 {
+ transform: translateY(-10%);
+  opacity: 0;
+  top: -30px;
+  margin-left: 0px;
+transition: all 0.5s ease-in-out;
+background: rgba(0,0,0,.8);
+width: 642px;
+height: 310px;
+border-radius: 5px;
+  box-shadow: 2px 3px 10px 0 rgba(0, 0, 0, 0.1);
+text-align: center;
+font-family: Sansita;
+line-height: 1;
+color: #000000;
+font-weight: lighter;
+padding: 2px 2px;
+}
+
+#toggles5:checked ~ .nav5 {
+ opacity: 1;
+  transform: translateY(10%);
+}
+
+#toggles5:checked ~ .button {
+transform: rotate(135deg);
+  box-shadow: 0 0 0 0 transparent;
+}
 
 /*-----------------------------
 * PESTAÑA 4 - TABS
@@ -2989,7 +3090,7 @@ line-height: 100px;
     bottom: 0;
     left: 0;
     right: 0;
-    background: rgba(38, 40, 52, 0.9);
+    background: rgba(0,0,0,.8);
     text-align: center;
     display: none;
     z-index: 9999999999999;
